--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,10 @@
 name: reusable_switch_btn
-description: "A new Flutter package project."
+description: "A customizable Flutter package with animated switch buttons, including AppSwitch, AppSwitchCard, and NormalSwitch for flexible UI designs."
 version: 0.0.1
-homepage:
+homepage: https://github.com/GenieCoderSrc/reusable_switch_btn
+repository: https://github.com/GenieCoderSrc/reusable_switch_btn
+issue_tracker: https://github.com/GenieCoderSrc/reusable_switch_btn/issues
+
 
 environment:
   sdk: ^3.7.2
@@ -10,7 +13,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  reusable_switch_btn: ^0.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -22,6 +25,8 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
 
+example:
+  path: example
   # To add assets to your package, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
